# kiwoom-cli

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GUIDE.md  LICENSE  README.md  SECURITY.md  kiwoom_cli_commands.xlsx  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/superpowers/specs/: 2026-04-05-kiwoom-subagents-design.md
kiwoom_cli/: __init__.py  api_spec.py  auth.py  client.py  config.py  formatters.py  krx_data.py  main.py  output.py  secure_store.py  streaming.py
kiwoom_cli/commands/: _constants.py  account.py  dashboard.py  market.py  order.py  stock.py  stream.py  watch.py
scripts/: regen_excel.py
tests/: conftest.py  fakes.py  test_account.py  test_auth.py  test_cli.py  test_client.py  test_formatters.py  test_formatters_property.py  test_krx_data.py  test_market.py  test_migration.py  test_order.py  test_secure_store.py  test_stock.py
