[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiwoom-cli"
version = "0.1.0"
description = "User-friendly CLI for the Kiwoom Securities REST API"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
    "tomli>=2.0;python_version<'3.11'",
    "tomli-w>=1.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-httpx>=0.30"]

[project.scripts]
kiwoom = "kiwoom_cli.main:cli"

[tool.setuptools.packages.find]
include = ["kiwoom_cli*"]
